Support including/excluding test users with a config flag
The flag is set to False by default.
This allows programs to first assign test tokens to program admins and:
(1) validate that the dashboard works, and
(2) get an intuition of what the dashboard means

Once the program has started, we can flip the switch and only show actual
participants.

+ ensure that we use the filtered quality string throughout
+ ensure that we don't repeat the quality text twice for the distribution across days

Testing done:
- All notebooks run with `include_test_users=False`
- `generic_metrics` runs with `include_test_users=True` and the generated
  graphs say that they are a combination of testers and participants
- Running with `STUDY_CONFIG=durham`, the `generate_plots.py` command runs successfully without including test users

```
python bin/generate_plots.py generic_timeseries.ipynb default
About to download config from https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/configs/durham.nrel-op.json
Successfully downloaded config with version 1 for Bull E-Bike Pilot (“the Pilot”) and data collection URL https://durham-openpath.nrel.gov/api/
Running at 2022-10-23T00:25:00.472123+00:00 with args Namespace(date=None, plot_notebook='generic_timeseries.ipynb', program='default') for range (<Arrow [2022-08-01T00:00:00+00:00]>, <Arrow [2022-10-01T00:00:00+00:00]>)
Running at 2022-10-23T00:25:00.511156+00:00 with params [Parameter('year', int), Parameter('month', int), Parameter('program', str, value='default'), Parameter('study_type', str, value='program'), Parameter('include_test_users', bool, value=False)]
Running at 2022-10-23T00:26:47.149748+00:00 with params [Parameter('year', int, value=2022), Parameter('month', int, value=8), Parameter('program', str, value='default'), Parameter('study_type', str, value='program'), Parameter('include_test_users', bool, value=False)]
Running at 2022-10-23T00:26:52.506665+00:00 with params [Parameter('year', int, value=2022)

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -29,7 +29,8 @@
     "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"e-bike\""
+    "mode_of_interest = \"e-bike\"\n",
+    "include_test_users = False"
    ]
   },
   {
@@ -107,7 +108,8 @@
     "                                                                            program,\n",
     "                                                                            study_type,\n",
     "                                                                            dic_re,\n",
-    "                                                                            dic_pur=dic_pur)\n",
+    "                                                                            dic_pur=dic_pur,\n",
+    "                                                                            include_test_users=include_test_users)\n",
     "# CASE 1 of https://github.com/e-mission/em-public-dashboard/issues/69#issuecomment-1256835867 \n",
     "expanded_ct = scaffolding.add_energy_impact(expanded_ct, df_ei, dic_fuel) if len(expanded_ct) > 0 else expanded_ct"
    ]
