--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -29,7 +29,8 @@
     "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
-    "mode_of_interest = None"
+    "mode_of_interest = None\n",
+    "include_test_users = False"
    ]
   },
   {
@@ -88,7 +89,8 @@
     "                                                                            program,\n",
     "                                                                            study_type,\n",
     "                                                                            dic_re,\n",
-    "                                                                            dic_pur=dic_pur)"
+    "                                                                            dic_pur=dic_pur,\n",
+    "                                                                            include_test_users=include_test_users)"
    ]
   },
   {
@@ -145,7 +147,7 @@
     "try:\n",
     "    labels_mc = expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_mc = expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True).tolist()\n",
-    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(\"Trip_purpose == 'Work'\"), \"commute\")\n",
+    "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(\"Trip_purpose == 'Work'\"), \"commute\", include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+commute_quality_text\n",
     "    pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
@@ -210,7 +212,7 @@
     "try:\n",
     "    labels_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).keys().tolist()\n",
     "    values_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).tolist()\n",
-    "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance_miles'] <= 10], \"< 10 mile\")\n",
+    "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance_miles'] <= 10], \"< 10 mile\", include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+d10_quality_text\n",
     "    pie_chart_mode(plot_title,labels_d10,values_d10,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
