--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -26,7 +26,8 @@
     "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"study\"\n",
-    "mode_of_interest = None"
+    "mode_of_interest = None\n",
+    "include_test_users = False"
    ]
   },
   {
@@ -84,7 +85,8 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
-    "                                                                            dic_re)\n",
+    "                                                                            dic_re,\n",
+    "                                                                            include_test_users=include_test_users)\n",
     "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel) if \"mode_confirm\" in expanded_ct.columns else expanded_ct"
    ]
   },
@@ -280,7 +282,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality = 'Number of Active Users\\n%s'%quality_text\n",
+    "plot_title_no_quality = 'Number of Active Users'\n",
     "file_name = \"ts_users%s\"%file_suffix\n",
     "\n",
     "try:\n",
