--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -26,7 +26,8 @@
     "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"e-bike\""
+    "mode_of_interest = \"e-bike\"\n",
+    "include_test_users = False"
    ]
   },
   {
@@ -95,7 +96,8 @@
     "                                                                            program,\n",
     "                                                                            study_type,\n",
     "                                                                            dic_re,\n",
-    "                                                                            dic_pur=dic_pur)"
+    "                                                                            dic_pur=dic_pur,\n",
+    "                                                                            include_test_users=include_test_users)"
    ]
   },
   {
@@ -180,6 +182,15 @@
     "        mode_counts['Mode_confirm'] = mode_counts['mode_confirm'].map(dic_re)\n",
     "        mode_counts_interest['Mode_confirm'] = mode_counts_interest['mode_confirm'].map(dic_re)\n",
     "        mode_distance_interest['Mode_confirm'] = mode_distance_interest['mode_confirm'].map(dic_re)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quality_text = scaffolding.get_quality_text(expanded_ct, mode_counts_interest, mode_of_interest, include_test_users)"
    ]
   },
   {
