--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -29,7 +29,8 @@
     "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"e-bike\""
+    "mode_of_interest = \"e-bike\"\n",
+    "include_test_users = False"
    ]
   },
   {
@@ -102,7 +103,8 @@
     "                                                                            program,\n",
     "                                                                            study_type,\n",
     "                                                                            dic_re,\n",
-    "                                                                            dic_pur=dic_pur)"
+    "                                                                            dic_pur=dic_pur,\n",
+    "                                                                            include_test_users=include_test_users)"
    ]
   },
   {
@@ -143,7 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "quality_text = scaffolding.get_quality_text(expanded_ct, data_eb, mode_of_interest)"
+    "quality_text = scaffolding.get_quality_text(expanded_ct, data_eb, mode_of_interest, include_test_users)"
    ]
   },
   {
@@ -286,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=f\"Number of {mode_of_interest} trips by day\\n%s\" % quality_text\n",
+    "plot_title_no_quality=f\"Number of {mode_of_interest} trips by day\"\n",
     "file_name =f'ntrips_{mode_of_interest}_per_day%s' % file_suffix\n",
     "\n",
     "\n",
