--- a/viz_scripts/replacement_model_data_processing.ipynb
+++ b/viz_scripts/replacement_model_data_processing.ipynb
@@ -158,7 +158,7 @@
    },
    "outputs": [],
    "source": [
-    "expanded_ct, file_suffix, quality_text = scaffolding.load_viz_notebook_data(year,\n",
+    "expanded_ct, file_suffix, quality_text, debug_df = scaffolding.load_viz_notebook_data(year,\n",
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
