--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "narrative-hunter",
+   "id": "9c7ca9a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "activated-portugal",
+   "id": "narrative-hunter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alternative-voltage",
+   "id": "activated-portugal",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,11 +121,16 @@
     "file_name='ntrips_mode_confirm%s' % file_suffix\n",
     "plot_title_no_quality= \"Number of trips for each mode (selected by users)\"\n",
     "try:\n",
+    "  \n",
     "    labels_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).keys().tolist()\n",
-    "    values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).tolist()    \n",
+    "    values_mc = expanded_ct['Mode_confirm'].value_counts(dropna=True).tolist()\n",
+    "    \n",
+    "    data = pd.DataFrame({\"Mode_confirm\": labels_mc,\n",
+    "                   \"Number of Trips\": values_mc})\n",
     "    plot_title = plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
-    "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
+    "    \n",
+    "    barplot_mode(data,\"Mode_confirm\",\"Number of Trips\", plot_title,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Mode_confirm']), file_name, plot_title)\n",
     "    print(expanded_ct['Mode_confirm'].value_counts(dropna=True))\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -149,8 +154,10 @@
     "    values_mc = expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True).tolist()\n",
     "    commute_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct.query(\"Trip_purpose == 'Work'\"), \"commute\", include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+commute_quality_text\n",
-    "    pie_chart_mode(plot_title,labels_mc,values_mc,file_name)\n",
-    "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
+    "    data = pd.DataFrame({\"Mode_confirm\": labels_mc,\n",
+    "                   \"Number of Trips\": values_mc})\n",
+    "    barplot_mode(data,\"Mode_confirm\",\"Number of Trips\", plot_title,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "    print(expanded_ct.query(\"Trip_purpose == 'Work'\").Mode_confirm.value_counts(dropna=True))\n",
     "except:\n",
     "    debug_df.loc[\"Commute_trips\"] = len(expanded_ct.query(\"Trip_purpose == 'Work'\")) if \"Trip_purpose\" in expanded_ct.columns else 0\n",
@@ -182,8 +189,11 @@
     "    labels_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).keys().tolist()\n",
     "    values_tp = expanded_ct['Trip_purpose'].value_counts(dropna=True).tolist()\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    pie_chart_purpose(plot_title,labels_tp,values_tp,file_name)\n",
-    "    alt_text = store_alt_text_pie(pd.DataFrame(values_tp, labels_tp), file_name, plot_title)\n",
+    "    \n",
+    "    data = pd.DataFrame({\"Mode_confirm\": labels_tp,\n",
+    "                   \"Number of Trips\": values_tp})\n",
+    "    barplot_purpose(data,\"Mode_confirm\",\"Number of Trips\", plot_title,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Mode_confirm']), file_name, plot_title)\n",
     "    print(expanded_ct['Trip_purpose'].value_counts(dropna=True))\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
@@ -214,8 +224,11 @@
     "    values_d10 = expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True).tolist()\n",
     "    d10_quality_text = scaffolding.get_quality_text(expanded_ct, expanded_ct[expanded_ct['distance_miles'] <= 10], \"< 10 mile\", include_test_users)\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+d10_quality_text\n",
-    "    pie_chart_mode(plot_title,labels_d10,values_d10,file_name)\n",
-    "    alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
+    "    \n",
+    "    data = pd.DataFrame({\"Mode_confirm\": labels_d10,\n",
+    "                   \"Number of Trips\": values_d10})\n",
+    "    barplot_mode(data,\"Mode_confirm\",\"Number of Trips\", plot_title,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(data['Number of Trips'].values, data['Mode_confirm']), file_name, plot_title)\n",
     "    print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].Mode_confirm.value_counts(dropna=True))\n",
     "except:\n",
     "    d10_df = expanded_ct.query(\"distance_miles <= 10\") if \"distance_miles\" in expanded_ct.columns else expanded_ct\n",
@@ -249,21 +262,10 @@
     "    miles.columns = ['Total (miles)', 'Count', 'Average (miles)']\n",
     "    miles = miles.reset_index()\n",
     "    miles =miles.sort_values(by=['Total (miles)'], ascending=False)\n",
-    "\n",
-    "    #data\n",
-    "    miles_dict = dict(zip(miles['Mode_confirm'], miles['Total (miles)']))\n",
-    "\n",
-    "    labels_m = []\n",
-    "    values_m = []\n",
-    "\n",
-    "    for x, y in miles_dict.items():\n",
-    "        labels_m.append(x)\n",
-    "        values_m.append(y)\n",
     "        \n",
     "    plot_title=\"Miles for each mode (selected by users)\\n%s\" % quality_text\n",
-    "\n",
-    "    pie_chart_mode(plot_title,labels_m,values_m,file_name)\n",
-    "    alt_text = store_alt_text_pie(pd.DataFrame(values_m, labels_m), file_name, plot_title)\n",
+    "    barplot_mode(miles,\"Mode_confirm\",\"Total (miles)\", plot_title,file_name)\n",
+    "    alt_text = store_alt_text_bar(pd.DataFrame(miles['Total (miles)'].values, miles['Mode_confirm']), file_name, plot_title)\n",
     "    print(miles)\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
