Reverting parameters of mode_specific_metrics to original

--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -25,11 +25,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = None\n",
-    "month = None\n",
+    "year = 2020\n",
+    "month = 11\n",
     "program = \"default\"\n",
     "study_type = \"program\"\n",
-    "mode_of_interest = \"pilot_ebike\"\n",
+    "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False"
    ]
   },
