Updated generate_plots.py to identify dynamic_labels and pass the URL associated with it to notebook. Updated generic_metrics.ipynb to pass dynamic_labels URL and bool check to scaffolding. Updated scaffolding to handle dynamic_labels.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -30,7 +30,9 @@
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
-    "include_test_users = False"
+    "include_test_users = False\n",
+    "has_dynamic_labels = True\n",
+    "dynamic_labels_url = \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/label_options/example-program-label-options.json\"\n"
    ]
   },
   {
@@ -43,7 +45,7 @@
     "from collections import defaultdict\n",
     "\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
+    "import pandas as pd4\n",
     "\n",
     "from plots import *\n",
     "import scaffolding\n",
@@ -88,6 +90,8 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
+    "                                                                            has_dynamic_labels,\n",
+    "                                                                            dynamic_labels_url,\n",
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)"
@@ -392,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
