✨ add the `sensed` prefix to the metrics generated from sensed data
Fix to 1360e57845e664c8827c98a8716631a29203ba70

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -258,7 +258,7 @@
    "outputs": [],
    "source": [
     "plot_title_no_quality=\"Number of trips by day\\n(inferred by OpenPATH from phone sensors)\"\n",
-    "file_name ='ntrips_per_day%s' % file_suffix\n",
+    "file_name ='ntrips_sensed_per_day%s' % file_suffix\n",
     "\n",
     "try:\n",
     "    fq_days = expanded_ct.groupby(['start_local_dt_day']).agg({'start_local_dt_day': ['sum', 'count']})\n",
@@ -294,7 +294,7 @@
    "outputs": [],
    "source": [
     "plot_title_no_quality=\"Number of trips by weekday\\n(inferred by OpenPATH from phone sensors)\"\n",
-    "file_name ='ntrips_per_weekday%s' % file_suffix\n",
+    "file_name ='ntrips_sensed_per_weekday%s' % file_suffix\n",
     "try:\n",
     "    fq_weekdays = expanded_ct.groupby(['start_local_dt_weekday']).agg({'start_local_dt_weekday': ['sum', 'count']})\n",
     "    fq_weekdays = fq_weekdays.reset_index()\n",
