--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -27,7 +27,8 @@
     "program = \"default\"\n",
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
-    "include_test_users = False"
+    "include_test_users = False\n",
+    "dynamic_labels = {}"
    ]
   },
   {
@@ -85,6 +86,7 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
+    "                                                                            dynamic_labels,\n",
     "                                                                            dic_re,\n",
     "                                                                            include_test_users=include_test_users)\n",
     "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel) if \"mode_confirm\" in expanded_ct.columns else expanded_ct"
@@ -364,7 +366,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
