--- a/viz_scripts/mode_specific_metrics.ipynb
+++ b/viz_scripts/mode_specific_metrics.ipynb
@@ -31,7 +31,7 @@
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
     "include_test_users = False\n",
-    "dynamic_labels_url = \"https://raw.githubusercontent.com/e-mission/nrel-openpath-deploy-configs/main/label_options/example-program-label-options.json\""
+    "dynamic_labels = { }"
    ]
   },
   {
@@ -103,7 +103,7 @@
     "                                                                            month,\n",
     "                                                                            program,\n",
     "                                                                            study_type,\n",
-    "                                                                            dynamic_labels_url,\n",
+    "                                                                            dynamic_labels,\n",
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)"
