🗃️ Handle zero data size better
- only process data if the data size > 0
- catch all exceptions and remove `logging`; make the sensed notebook
  consistent with the generic metrics notebook

--- a/viz_scripts/generic_metrics_sensed.ipynb
+++ b/viz_scripts/generic_metrics_sensed.ipynb
@@ -110,8 +110,7 @@
     "    pie_chart_sensed_mode(plot_title,labels_mc,values_mc,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_mc, labels_mc), file_name, plot_title)\n",
     "    print(expanded_ct['primary_mode'].value_counts(dropna=True))\n",
-    "except Exception as e:\n",
-    "    logging.exception(e)\n",
+    "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
    ]
@@ -143,8 +142,7 @@
     "    pie_chart_sensed_mode(plot_title,labels_d10,values_d10,file_name)\n",
     "    alt_text = store_alt_text_pie(pd.DataFrame(values_d10, labels_d10), file_name, plot_title)\n",
     "    print(expanded_ct.loc[(expanded_ct['distance_miles'] <= 10)].primary_mode.value_counts(dropna=True))\n",
-    "except Exception as e:\n",
-    "    logging.exception(e)\n",
+    "except:\n",
     "    d10_df = expanded_ct.query(\"distance_miles <= 10\") if \"distance_miles\" in expanded_ct.columns else expanded_ct\n",
     "    debug_df.loc[\"Trips_less_than_10_miles\"] = scaffolding.trip_label_count(\"Mode_confirm\", d10_df)\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
