Move quality_text code into the if block in the above cell.

--- a/viz_scripts/mode_specific_timeseries.ipynb
+++ b/viz_scripts/mode_specific_timeseries.ipynb
@@ -157,8 +157,6 @@
    },
    "outputs": [],
    "source": [
-    "mode_counts_interest = pd.DataFrame()\n",
-    "\n",
     "if len(expanded_ct) > 0:\n",
     "    # Get the count of unique users that were active on each given date\n",
     "    active_users = pd.DataFrame(data.groupby(['date_time'], as_index=False)['user_id'].nunique())\n",
@@ -181,28 +179,13 @@
     "        # This is the mode specific part\n",
     "        mode_counts_interest = mode_counts[mode_counts['mode_confirm']==mode_of_interest].copy()\n",
     "        mode_distance_interest = mode_distance[mode_distance['mode_confirm']==mode_of_interest].copy()\n",
-    "        \n",
-    "        try:\n",
-    "            if len(mode_counts_interest) == 0:\n",
-    "            # force error generation so that we will go into the \"missing\" data code path\n",
-    "                raise RuntimeError(f\"No {mode_of_interest} trips found\")\n",
     "\n",
-    "            # Mapping new mode labels with dictionaries\n",
-    "            mode_counts['Mode_confirm'] = mode_counts['mode_confirm'].map(dic_re)\n",
-    "            mode_counts_interest['Mode_confirm'] = mode_counts_interest['mode_confirm'].map(dic_re)\n",
-    "            mode_distance_interest['Mode_confirm'] = mode_distance_interest['mode_confirm'].map(dic_re)\n",
-    "        except:\n",
-    "            print (f\"No {mode_of_interest} trips found\")\n",
+    "        # Mapping new mode labels with dictionaries\n",
+    "        mode_counts['Mode_confirm'] = mode_counts['mode_confirm'].map(dic_re)\n",
+    "        mode_counts_interest['Mode_confirm'] = mode_counts_interest['mode_confirm'].map(dic_re)\n",
+    "        mode_distance_interest['Mode_confirm'] = mode_distance_interest['mode_confirm'].map(dic_re)\n",
+    "        quality_text = scaffolding.get_quality_text(expanded_ct, mode_counts_interest, mode_of_interest, include_test_users)\n",
     "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "quality_text = scaffolding.get_quality_text(expanded_ct, mode_counts_interest, mode_of_interest, include_test_users)"
    ]
   },
   {
