--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -112,8 +112,12 @@
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)\n",
+    "\n",
     "# CASE 1 of https://github.com/e-mission/em-public-dashboard/issues/69#issuecomment-1256835867 \n",
-    "expanded_ct = scaffolding.add_energy_impact(expanded_ct, df_ei, dic_fuel) if len(expanded_ct) > 0 else expanded_ct"
+    "if len(dynamic_labels) > 0:\n",
+    "    expanded_ct = scaffolding.compute_CO2_impact_kg(expanded_ct, dynamic_labels) if len(expanded_ct) > 0 else expanded_ct\n",
+    "else:\n",
+    "    expanded_ct = scaffolding.add_energy_impact(expanded_ct, df_ei, dic_fuel) if len(expanded_ct) > 0 else expanded_ct"
    ]
   },
   {
@@ -214,22 +218,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot_title_no_quality=f\"Sketch of Total Pounds of CO2 Emissions of {mode_of_interest} trips\"\n",
+    "plot_title_no_quality=f\"Sketch of Total Kilograms of CO2 Emissions of {mode_of_interest} trips\"\n",
     "file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
     "\n",
     "try:\n",
-    "    ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(lb)': ['sum', 'mean']},)\n",
-    "    ebco2.columns = ['total_lb_CO2_emissions', 'average_lb_CO2_emission']\n",
+    "    ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(kg)': ['sum', 'mean']},)\n",
+    "    ebco2.columns = ['total_kg_CO2_emissions', 'average_kg_CO2_emission']\n",
     "    ebco2 = ebco2.reset_index()\n",
-    "    ebco2 = ebco2.sort_values(by=['total_lb_CO2_emissions'], ascending=False)\n",
-    "    ebco2['boolean'] = ebco2['total_lb_CO2_emissions'] > 0\n",
-    "    net_CO2_emissions = round(sum(ebco2['total_lb_CO2_emissions']), 2)\n",
+    "    ebco2 = ebco2.sort_values(by=['total_kg_CO2_emissions'], ascending=False)\n",
+    "    ebco2['boolean'] = ebco2['total_kg_CO2_emissions'] > 0\n",
+    "    net_CO2_emissions = round(sum(ebco2['total_kg_CO2_emissions']), 2)\n",
     "\n",
-    "    x = ebco2['total_lb_CO2_emissions']\n",
+    "    x = ebco2['total_kg_CO2_emissions']\n",
     "    y = ebco2['Replaced_mode']\n",
     "    color = ebco2['boolean']\n",
     "\n",
-    "    plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}(lb CO2 Emissions )\\n\"+quality_text\n",
+    "    plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}(kg CO2 Emissions )\\n\"+quality_text\n",
     "    CO2_impact(x,y,color,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
     "except:\n",
