Move the compute_CO2_impact_kg() call to scaffolding, such that energy_impact is computed regardless.

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -113,11 +113,7 @@
     "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)\n",
     "\n",
-    "# CASE 1 of https://github.com/e-mission/em-public-dashboard/issues/69#issuecomment-1256835867 \n",
-    "if len(dynamic_labels) > 0:\n",
-    "    expanded_ct = scaffolding.compute_CO2_impact_kg(expanded_ct, dynamic_labels) if len(expanded_ct) > 0 else expanded_ct\n",
-    "else:\n",
-    "    expanded_ct = scaffolding.add_energy_impact(expanded_ct, df_ei, dic_fuel) if len(expanded_ct) > 0 else expanded_ct"
+    "expanded_ct = scaffolding.add_energy_impact(expanded_ct, df_ei, dic_fuel, dynamic_labels) if len(expanded_ct) > 0 else expanded_ct"
    ]
   },
   {
