--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "year = 2020\n",
-    "month = 11\n",
+    "year = None\n",
+    "month = None\n",
     "program = \"default\"\n",
     "study_type = \"program\"\n",
     "mode_of_interest = \"e-bike\"\n",
@@ -217,6 +217,42 @@
     "plot_title_no_quality=f\"Sketch of Total Kilograms of CO2 Emissions of {mode_of_interest} trips\"\n",
     "file_name =f'sketch_CO2impact_{mode_of_interest}%s' % file_suffix\n",
     "\n",
+    "filtered_taxi_data = data_eb[ data_eb['Replaced_mode'] == \"Taxi/Uber/Lyft\" ]\n",
+    "filtered_bus_data = data_eb[ data_eb['Replaced_mode'] == \"Bus\" ]\n",
+    "filtered_notravel_data = data_eb[ data_eb['Replaced_mode'] == \"No Travel\" ]\n",
+    "filtered_freeshuttle_data = data_eb[ data_eb['Replaced_mode'] == \"Free Shuttle\" ]\n",
+    "filtered_walk_data = data_eb[ data_eb['Replaced_mode'] == \"Walk\" ]\n",
+    "filtered_GasCarShared_data = data_eb[ data_eb['Replaced_mode'] == \"Gas Car, with others\" ]\n",
+    "\n",
+    "selected_columns = ['distance', 'Replaced_mode_kg_CO2', 'Mode_confirm_kg_CO2', \"replaced_mode\", \"mode_confirm\"]\n",
+    "\n",
+    "print(\"With Default mapping:\")\n",
+    "print(\"\")\n",
+    "\n",
+    "print(\"Walk Data:\") \n",
+    "print(str(filtered_walk_data[selected_columns].head()))\n",
+    "print(\" \")\n",
+    "\n",
+    "print(\"No Travel Data:\") \n",
+    "print(str(filtered_notravel_data[selected_columns].head()))\n",
+    "print(\" \")\n",
+    "\n",
+    "print(\"Gas Car Shared Data:\") \n",
+    "print(str(filtered_GasCarShared_data[selected_columns].head()))\n",
+    "print(\" \")\n",
+    "\n",
+    "print(\"Free Shuttle Data:\") \n",
+    "print(str(filtered_freeshuttle_data[selected_columns].head()))\n",
+    "print(\" \")\n",
+    "\n",
+    "print(\"Bus Data:\") \n",
+    "print(str(filtered_bus_data[selected_columns].head()))\n",
+    "print(\" \")\n",
+    "\n",
+    "print(\"Taxi/Uber/Lyft Data:\") \n",
+    "print(str(filtered_taxi_data[selected_columns].head()))\n",
+    "print(\" \")\n",
+    "\n",
     "try:\n",
     "    ebco2=data_eb.groupby('Replaced_mode').agg({'CO2_Impact(kg)': ['sum', 'mean']},)\n",
     "    ebco2.columns = ['total_kg_CO2_emissions', 'average_kg_CO2_emission']\n",
@@ -232,6 +268,9 @@
     "    plot_title= plot_title_no_quality+f\"\\n Contribution by replaced mode towards a total of {net_CO2_emissions}(kg CO2 Emissions )\\n\"+quality_text\n",
     "    CO2_impact(x,y,color,plot_title,file_name)\n",
     "    alt_text = store_alt_text_bar(pd.DataFrame(x.values,y), file_name, plot_title)\n",
+    "    \n",
+    "    print(\"Total Kg CO2 Emissions\")\n",
+    "    print(ebco2['total_kg_CO2_emissions'])\n",
     "except:\n",
     "    generate_missing_plot(plot_title_no_quality,debug_df,file_name)\n",
     "    alt_text = store_alt_text_missing(debug_df, file_name, plot_title_no_quality)"
