--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -89,7 +89,8 @@
     "                                                                            dynamic_labels,\n",
     "                                                                            dic_re,\n",
     "                                                                            include_test_users=include_test_users)\n",
-    "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel) if \"mode_confirm\" in expanded_ct.columns else expanded_ct"
+    "\n",
+    "expanded_ct = scaffolding.add_energy_labels(expanded_ct, df_ei, dic_fuel, dynamic_labels) if \"mode_confirm\" in expanded_ct.columns else expanded_ct"
    ]
   },
   {
@@ -106,8 +107,9 @@
    "outputs": [],
    "source": [
     "# Get timestamp from known year/month/day aggregated to days\n",
-    "sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance_miles']\n",
-    "sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_lb_CO2']\n",
+    "sel_cols_no_label_dep = ['user_id','start_local_dt_year','start_local_dt_month','start_local_dt_day','distance']\n",
+    "sel_cols_with_label_dep = sel_cols_no_label_dep + ['Mode_confirm','Mode_confirm_EI(kWH)','Mode_confirm_kg_CO2']\n",
+    "\n",
     "if len(expanded_ct) == 0:\n",
     "    data = expanded_ct.copy()\n",
     "elif \"Mode_confirm\" not in expanded_ct.columns:\n",
@@ -125,8 +127,22 @@
     "    data.date_time = pd.Categorical(data.date_time)\n",
     "    \n",
     "    if \"Mode_confirm\" in expanded_ct.columns:\n",
-    "        data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
+    "        if (len(dynamic_labels) > 0):\n",
+    "            if \"translations\" in dynamic_labels and \"en\" in dynamic_labels[\"translations\"]:\n",
+    "                translations = dynamic_labels[\"translations\"][\"en\"]\n",
     "\n",
+    "                def translate_labels(labels):\n",
+    "                    translation_mapping = {}\n",
+    "                    for label in labels:\n",
+    "                        value = label[\"value\"]\n",
+    "                        translation = translations.get(value)\n",
+    "                        translation_mapping[value] = translation\n",
+    "                    return defaultdict(lambda: 'Other', translation_mapping)\n",
+    "\n",
+    "            dic_mode_mapping = translate_labels(dynamic_labels[\"MODE\"])\n",
+    "            data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))\n",
+    "        else:\n",
+    "            data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
     "data.head()"
    ]
   },
@@ -149,25 +165,25 @@
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
     "\n",
     "        # Sum daily distance traveled for each mode\n",
-    "        mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance_miles']].sum()\n",
-    "        mode_distance.rename(columns={'sum':'distance_miles'}, inplace=True)\n",
-    "        mode_distance['distance_miles'] = mode_distance['distance_miles'].fillna(0)\n",
+    "        mode_distance = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False)[['distance']].sum()\n",
+    "        mode_distance.rename(columns={'sum':'distance'}, inplace=True)\n",
+    "        mode_distance['distance'] = mode_distance['distance'].fillna(0)\n",
     "\n",
     "        # Sum daily emissions for each user\n",
-    "        emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_lb_CO2', 'distance_miles']].sum()\n",
-    "        emissions['Mode_confirm_lb_CO2'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
-    "        emissions['distance_miles'] = emissions['Mode_confirm_lb_CO2'].fillna(0)\n",
+    "        emissions = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_kg_CO2', 'distance']].sum()\n",
+    "        emissions['Mode_confirm_kg_CO2'] = emissions['Mode_confirm_kg_CO2'].fillna(0)\n",
+    "        emissions['distance'] = emissions['Mode_confirm_kg_CO2'].fillna(0)\n",
     "\n",
     "        # Sum daily energy for each user\n",
-    "        energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance_miles']].sum()\n",
+    "        energy = data.groupby(['user_id','date_time'], as_index=False)[['Mode_confirm_EI(kWH)', 'distance']].sum()\n",
     "        energy['Mode_confirm_EI(kWH)'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
-    "        energy['distance_miles'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
+    "        energy['distance'] = energy['Mode_confirm_EI(kWH)'].fillna(0)\n",
     "\n",
     "        # Add 7-day rolling avg smoothing to better see trends\n",
     "        mode_counts['trip_count_smooth'] = mode_counts.groupby(['user_id','Mode_confirm'])['trip_count'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        mode_distance['distance_miles_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        emissions['distance_miles_smooth'] = emissions.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())\n",
-    "        energy['distance_miles_smooth'] = energy.groupby(['user_id'])['distance_miles'].apply(lambda x: x.rolling(7,1).mean())"
+    "        mode_distance['distance_smooth'] = mode_distance.groupby(['user_id','Mode_confirm'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "        emissions['distance_smooth'] = emissions.groupby(['user_id'])['distance'].apply(lambda x: x.rolling(7,1).mean())\n",
+    "        energy['distance_smooth'] = energy.groupby(['user_id'])['distance'].apply(lambda x: x.rolling(7,1).mean())"
    ]
   },
   {
@@ -195,12 +211,14 @@
     "\n",
     "try:\n",
     "    # Emissions per week across all users (net impact)\n",
-    "    plot_data = emissions.groupby(['date_time'], as_index=False)['Mode_confirm_lb_CO2'].agg(['sum'])\n",
+    "    plot_data = emissions.groupby(['date_time'], as_index=False)['Mode_confirm_kg_CO2'].agg(['sum'])\n",
+    "    total_sum = plot_data['sum'].sum()\n",
+    "\n",
     "    plot_data = plot_data.merge(active_users, on='date_time')\n",
     "    plot_data['sum'] = plot_data['sum'] / plot_data['active_users']\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Emissions (lb CO2/day/user)'\n",
+    "    ylab = 'Emissions (kg CO2/day/user)'\n",
     "    timeseries_plot(plot_data['date_time'], plot_data['sum'], plot_title, ylab, file_name)\n",
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "except:\n",
@@ -258,12 +276,12 @@
     "try:\n",
     "    # Emissions per mile per day across all users (travel efficiency)\n",
     "    # Note that the energy plot will be identical to this one since scale factor is divided out\n",
-    "    emissions['CO2_per_mile'] = emissions['Mode_confirm_lb_CO2'] / emissions['distance_miles_smooth']\n",
-    "    emissions['CO2_per_mile'] = emissions['CO2_per_mile'].fillna(0)\n",
-    "    plot_data = emissions.groupby(['date_time'])['CO2_per_mile'].agg(['mean']).reset_index()\n",
+    "    emissions['CO2_per_km'] = emissions['Mode_confirm_kg_CO2'] / emissions['distance_smooth']\n",
+    "    emissions['CO2_per_km'] = emissions['CO2_per_km'].fillna(0)\n",
+    "    plot_data = emissions.groupby(['date_time'])['CO2_per_km'].agg(['mean']).reset_index()\n",
     "\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
-    "    ylab = 'Emissions (lb CO2/mile/day)'\n",
+    "    ylab = 'Emissions (kg CO2/km/day)'\n",
     "    timeseries_plot(plot_data['date_time'], plot_data['mean'], plot_title, ylab, file_name)\n",
     "    alt_text = store_alt_text_timeseries(plot_data, file_name, plot_title)\n",
     "except:\n",
@@ -335,10 +353,21 @@
     "    plot_data = plot_data.merge(total_trips, on='date_time')\n",
     "    plot_data['trip_proportion'] = plot_data['trip_count_smooth_x'] / plot_data['trip_count_smooth_y']\n",
     "\n",
-    "    # Re-establish categorical variable to not include Other and Non-trips\n",
-    "    plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
-    "    plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
-    "\n",
+    "    if (len(dynamic_labels)):\n",
+    "        mode_to_en = {}\n",
+    "        for mode_values in dynamic_labels[\"MODE\"]:\n",
+    "            mode_value = mode_values[\"value\"]\n",
+    "            en_translation = dynamic_labels[\"translations\"][\"en\"].get(mode_value, \"Translation not available\")\n",
+    "            mode_to_en[mode_value] = en_translation\n",
+    "        \n",
+    "        # Re-establish categorical variable to not include Other and Non-trips\n",
+    "        plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
+    "        plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(mode_to_en.values())))\n",
+    "    else:\n",
+    "        # Re-establish categorical variable to not include Other and Non-trips\n",
+    "        plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
+    "        plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
+    "    \n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    ylab = 'Proportion of All Trips'\n",
     "    legend_title = 'Confirmed Mode'\n",
