Update the mode mapping in accordance to MODE for Daily Mode Share in generic_timeseries.ipynb.

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -28,7 +28,7 @@
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = False\n",
-    "dynamic_labels = {}"
+    "dynamic_labels = { }"
    ]
   },
   {
@@ -159,7 +159,7 @@
     "    active_users = pd.DataFrame(data.groupby(['date_time'], as_index=False)['user_id'].nunique())\n",
     "    active_users.rename(columns={'user_id':'active_users'}, inplace=True)\n",
     "\n",
-    "    if \"Mode_confirm\" in expanded_ct.columns:\n",
+    "    if \"Mode_confirm\" in expanded_ct.columns:   \n",
     "        # Count the number of trips for each confirmed mode\n",
     "        mode_counts = data.groupby(['user_id','date_time','Mode_confirm'], as_index=False).size()\n",
     "        mode_counts.rename(columns={'size':'trip_count'}, inplace=True)\n",
@@ -352,22 +352,26 @@
     "    total_trips = plot_data.groupby(['date_time'], as_index=False).sum()\n",
     "    plot_data = plot_data.merge(total_trips, on='date_time')\n",
     "    plot_data['trip_proportion'] = plot_data['trip_count_smooth_x'] / plot_data['trip_count_smooth_y']\n",
-    "\n",
-    "    if (len(dynamic_labels)):\n",
-    "        mode_to_en = {}\n",
-    "        for mode_values in dynamic_labels[\"MODE\"]:\n",
-    "            mode_value = mode_values[\"value\"]\n",
-    "            en_translation = dynamic_labels[\"translations\"][\"en\"].get(mode_value, \"Translation not available\")\n",
-    "            mode_to_en[mode_value] = en_translation\n",
-    "        \n",
-    "        # Re-establish categorical variable to not include Other and Non-trips\n",
-    "        plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
-    "        plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(mode_to_en.values())))\n",
-    "    else:\n",
-    "        # Re-establish categorical variable to not include Other and Non-trips\n",
-    "        plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
-    "        plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
     "    \n",
+    "    # Re-establish categorical variable to not include Other and Non-trips\n",
+    "    plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
+    "\n",
+    "    if (len(dynamic_labels) > 0):\n",
+    "        if \"translations\" in dynamic_labels and \"en\" in dynamic_labels[\"translations\"]:\n",
+    "            translations = dynamic_labels[\"translations\"][\"en\"]\n",
+    "\n",
+    "            def translate_labels(labels):\n",
+    "                translation_mapping = {}\n",
+    "                for label in labels:\n",
+    "                    value = label[\"value\"]\n",
+    "                    translation = translations.get(value)\n",
+    "                    translation_mapping[value] = translation\n",
+    "                return defaultdict(lambda: 'Other', translation_mapping)\n",
+    "\n",
+    "            dic_mode_mapping = translate_labels(dynamic_labels[\"MODE\"])\n",
+    "            plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))    \n",
+    "    else:\n",
+    "        plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
     "    plot_title= plot_title_no_quality+\"\\n\"+quality_text\n",
     "    ylab = 'Proportion of All Trips'\n",
     "    legend_title = 'Confirmed Mode'\n",
