Reinstate the comment for energy_calculations.ipynb. Removed extranneous space for generic_timeseries.ipynb. Removed extranneous space for scaffolding.py. Reverted the bumped round off value to 3. This had been bumped up to 5, to make a better comparative study between the CO2 emission computation from energy_intensity.csv and label_options. Since, the comparative changes have been reverted. This has been reverted to pre-existing round-off of 3 places.

--- a/viz_scripts/energy_calculations.ipynb
+++ b/viz_scripts/energy_calculations.ipynb
@@ -112,6 +112,7 @@
     "                                                                            dic_re,\n",
     "                                                                            dic_pur=dic_pur,\n",
     "                                                                            include_test_users=include_test_users)\n",
+    "# CASE 1 of https://github.com/e-mission/em-public-dashboard/issues/69#issuecomment-1256835867 \n",
     "\n",
     "expanded_ct = scaffolding.add_energy_impact(expanded_ct, df_ei, dic_fuel, dynamic_labels) if len(expanded_ct) > 0 else expanded_ct"
    ]
