Created a new function inside scaffolding.py, mapping_labels(dynamic_labels, label_type). This replaces the same/similar logic written across different notebooks. Notably called from generic_metrics notebook - load_viz_notebook_data(), and other calls from generic_timeseries. Updated generic_timeseries.ipynb to call the scaffolding.mapping_labels(dynamic_labels, label_type) to remove redundancy of same code.

--- a/viz_scripts/generic_timeseries.ipynb
+++ b/viz_scripts/generic_timeseries.ipynb
@@ -128,18 +128,8 @@
     "    \n",
     "    if \"Mode_confirm\" in expanded_ct.columns:\n",
     "        if (len(dynamic_labels) > 0):\n",
-    "            if \"translations\" in dynamic_labels and \"en\" in dynamic_labels[\"translations\"]:\n",
-    "                translations = dynamic_labels[\"translations\"][\"en\"]\n",
-    "\n",
-    "                def translate_labels(labels):\n",
-    "                    translation_mapping = {}\n",
-    "                    for label in labels:\n",
-    "                        value = label[\"value\"]\n",
-    "                        translation = translations.get(value)\n",
-    "                        translation_mapping[value] = translation\n",
-    "                    return defaultdict(lambda: 'Other', translation_mapping)\n",
-    "\n",
-    "            dic_mode_mapping = translate_labels(dynamic_labels[\"MODE\"])\n",
+    "            label_type = \"MODE\" \n",
+    "            dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, label_type)\n",
     "            data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))\n",
     "        else:\n",
     "            data.Mode_confirm = pd.Categorical(data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
@@ -357,18 +347,8 @@
     "    plot_data = plot_data[~plot_data['Mode_confirm'].isin(['Not a Trip','Other'])]\n",
     "\n",
     "    if (len(dynamic_labels) > 0):\n",
-    "        if \"translations\" in dynamic_labels and \"en\" in dynamic_labels[\"translations\"]:\n",
-    "            translations = dynamic_labels[\"translations\"][\"en\"]\n",
-    "\n",
-    "            def translate_labels(labels):\n",
-    "                translation_mapping = {}\n",
-    "                for label in labels:\n",
-    "                    value = label[\"value\"]\n",
-    "                    translation = translations.get(value)\n",
-    "                    translation_mapping[value] = translation\n",
-    "                return defaultdict(lambda: 'Other', translation_mapping)\n",
-    "\n",
-    "            dic_mode_mapping = translate_labels(dynamic_labels[\"MODE\"])\n",
+    "            label_type = \"MODE\"\n",
+    "            dic_mode_mapping = scaffolding.mapping_labels(dynamic_labels, label_type)\n",
     "            plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_mode_mapping.values())))    \n",
     "    else:\n",
     "        plot_data.Mode_confirm = pd.Categorical(plot_data.Mode_confirm, ordered=True, categories=np.unique(list(dic_re.values())))\n",
