Update the purpose mapping for Work to select from scaffolding.mapping_labels() instead of hardcoding it with translation from work to To Work.

--- a/viz_scripts/generic_metrics.ipynb
+++ b/viz_scripts/generic_metrics.ipynb
@@ -31,7 +31,7 @@
     "study_type = \"study\"\n",
     "mode_of_interest = None\n",
     "include_test_users = False\n",
-    "dynamic_labels = { }"
+    "dynamic_labels = {}"
    ]
   },
   {
@@ -148,7 +148,9 @@
     "\n",
     "try:\n",
     "    if (len(dynamic_labels)):\n",
-    "        trip_purpose_query = \"Trip_purpose == 'To Work'\"\n",
+    "        purpose_map_label =  scaffolding.mapping_labels(dynamic_labels, \"PURPOSE\")\n",
+    "        translation_work = purpose_map_label['work']\n",
+    "        trip_purpose_query = f\"Trip_purpose == '{translation_work}'\"\n",
     "    else:\n",
     "        trip_purpose_query = \"Trip_purpose == 'Work'\"\n",
     "\n",
